--- a/index.html
+++ b/index.html
@@ -32,6 +32,199 @@
         <a class="hero__enlace" href="#">Obtener una cuenta</a>
     </section>
 
+
+    <section class="busqueda">
+        <h2 class="busqueda__heading">Busca un grupo en tu ciudad</h2>
+
+        <div class="contenedor">
+            <form class="formulario">
+                <select class="formulario__campo">
+                    <option > Programación</option>
+                    <option>Diseno</option>
+                    <option>negocio</option>
+                    <option>Moda</option>
+                    <option>Ejercicio y salud </option>
+                    <option>Fotografía</option>
+                    <option>Comida</option>
+                    <option>Diseno interior</option>
+                    <option>Café</option>
+                    <option>Cine</option>
+                    <option>Libros</option>
+                    <option>Emprendimientos</option>
+                </select>
+
+                <input class="formulario__campo" type="text" placeholder="Nombre evento">
+                <input class="formulario__campo" type="text" placeholder="Ciudad o País">
+                <input class="formulario__submit" type="submit" value="Buscar">
+            </form>
+        </div>
+    </section>
+
+
+    <main class="eventos contenedor">
+        <h2 class="eventos__heading">Próximos eventos</h2>
+
+        <div class="eventos__grid">
+
+            <div class="evento">
+                <a href="meeti.html">
+                    <img class="evento__imagen" src="./build/img/imagen1.jpg" alt="imagen evento">
+
+                    <div class="evento__contenido">
+                        <p class="evento__fecha">Jueves 30 de Septiembre del 2022</p>
+                        <h3 class="evento__nombre">Ideas de Negocios</h3>
+
+                        <div class="evento__autor">
+
+                            <div class="evento__autor-imagen">
+                                <img src="./build/img/perfil1.jpg" alt="imagen perfil">
+                            </div>
+
+
+                            <div class="evento__autor-informacion">
+                                <p class="evento__organizado-texto">Organizado por:</p>
+                                <p class="evento__organizado-nombre">Duglianny Desiree Olavarria Chacon</p>
+                            </div>
+
+                        </div>
+                    </div>  <!--evento contenido-->
+                </a>
+            </div>   <!--evento-->
+
+
+            <div class="evento">
+                <a href="meeti.html">
+                    <img class="evento__imagen" src="./build/img/imagen2.jpg" alt="imagen evento">
+
+                    <div class="evento__contenido">
+                        <p class="evento__fecha">Lunes 02 de Octubre del 2022</p>
+                        <h3 class="evento__nombre">Bitcoin y otras criptos</h3>
+
+                        <div class="evento__autor">
+
+                            <div class="evento__autor-imagen">
+                                <img src="./build/img/perfil1.jpg" alt="imagen perfil">
+                            </div>
+
+
+                            <div class="evento__autor-informacion">
+                                <p class="evento__organizado-texto">Organizado por:</p>
+                                <p class="evento__organizado-nombre">Duglianny Desiree Olavarria Chacon</p>
+                            </div>
+
+                        </div>
+                    </div>  <!--evento contenido-->
+                </a>
+            </div>   <!--evento-->
+
+
+            <div class="evento">
+                <a href="meeti.html">
+                    <img class="evento__imagen" src="./build/img/imagen1.jpg" alt="imagen evento">
+
+                    <div class="evento__contenido">
+                        <p class="evento__fecha">Miercoles 04 de Octubre del 2022</p>
+                        <h3 class="evento__nombre">Pizzas paso a paso</h3>
+
+                        <div class="evento__autor">
+
+                            <div class="evento__autor-imagen">
+                                <img src="./build/img/perfil2.jpg" alt="imagen perfil">
+                            </div>
+
+
+                            <div class="evento__autor-informacion">
+                                <p class="evento__organizado-texto">Organizado por:</p>
+                                <p class="evento__organizado-nombre">Josue Perez</p>
+                            </div>
+
+                        </div>
+                    </div>  <!--evento contenido-->
+                </a>
+            </div>   <!--evento-->
+        </div>
+    </main>
+
+
+    <section class="categorias">
+        <h2 class="categorias__heading">Categorías</h2>
+
+        <ul class="categorias__grid contenedor">
+
+            <li class="categoria">
+                <img class="categoria__imagen" src="./build/img/categoria_1.jpg" alt="imagen categoria">
+                <p class="categoria__nombre">Programación</p>
+            </li>
+
+
+            <li class="categoria">
+                <img class="categoria__imagen" src="./build/img/categoria_2.jpg" alt="imagen categoria">
+                <p class="categoria__nombre">Diseno UX y UI</p>
+            </li>
+
+
+            <li class="categoria">
+                <img class="categoria__imagen" src="./build/img/categoria_3.jpg" alt="imagen categoria">
+                <p class="categoria__nombre">Negocios e Ideas</p>
+            </li>
+
+
+            <li class="categoria">
+                <img class="categoria__imagen" src="./build/img/categoria_4.jpg" alt="imagen categoria">
+                <p class="categoria__nombre">Ropa y Moda</p>
+            </li>
+
+
+            <li class="categoria">
+                <img class="categoria__imagen" src="./build/img/categoria_5.jpg" alt="imagen categoria">
+                <p class="categoria__nombre">Ejercicio y bienestar </p>
+            </li>
+
+
+            <li class="categoria">
+                <img class="categoria__imagen" src="./build/img/categoria_6.jpg" alt="imagen categoria">
+                <p class="categoria__nombre">Fotografía</p>
+            </li>
+
+
+            <li class="categoria">
+                <img class="categoria__imagen" src="./build/img/categoria_7.jpg" alt="imagen categoria">
+                <p class="categoria__nombre">Comida</p>
+            </li>
+
+
+            <li class="categoria">
+                <img class="categoria__imagen" src="./build/img/categoria_8.jpg" alt="imagen categoria">
+                <p class="categoria__nombre">Diseno interior </p>
+            </li>
+
+
+            <li class="categoria">
+                <img class="categoria__imagen" src="./build/img/categoria_9.jpg" alt="imagen categoria">
+                <p class="categoria__nombre">Café</p>
+            </li>
+
+
+            <li class="categoria">
+                <img class="categoria__imagen" src="./build/img/categoria_10.jpg" alt="imagen categoria">
+                <p class="categoria__nombre">Cine</p>
+            </li>
+
+
+            <li class="categoria">
+                <img class="categoria__imagen" src="./build/img/categoria_11.jpg" alt="imagen categoria">
+                <p class="categoria__nombre">Libros</p>
+            </li>
+
+
+            <li class="categoria">
+                <img class="categoria__imagen" src="./build/img/categoria_12.jpg" alt="imagen categoria">
+                <p class="categoria__nombre">Emprendimiento</p>
+            </li>
+
+        </ul>
+    </section>
+
     
 </body>
 </html>
