--- a/meeti.html
+++ b/meeti.html
@@ -10,5 +10,71 @@
 </head>
 <body>
 
+    <header class="header contenedor">
+        <div class="header__logo">
+            <a href="index.html">
+                <img src="./build/img/logo.png" alt="imagen logo">
+            </a>
+        </div>
+
+        <nav class="navegacion">
+            <a class="navegacion__enlace navegacion__enlace--crear" href="#">Crear Grupo</a>
+            <a class="navegacion__enlace" href="#">Iniciar Sesión</a>
+            <a class="navegacion__enlace" href="#">Registrarse</a>
+        </nav>
+
+    </header>
+
+
+    <main class="meeti contenedor">
+        <h1 class="meeti__nombre">Headless WordPress con Next.js</h1>
+
+        <div class="meeti__grid">
+            <section class="meeti__informacion">
+                <img src="./build/img/meeti.jpg" alt="imagen meeti" class="meeti__imagen">
+
+                <p class="meeti__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ea necessitatibus, exercitationem temporibus voluptatum animi amet sint sed deserunt impedit porro quo, recusandae quaerat! Optio animi ipsum iure quam voluptate.</p>
+
+                <p class="meeti__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ea necessitatibus, exercitationem temporibus voluptatum animi amet sint sed deserunt impedit porro quo, recusandae quaerat! Optio animi ipsum iure quam voluptate.</p>
+            </section>
+
+            <aside class="sidebar">
+                <img src="./build/img/mapa.jpg" alt="imagen mapa" class="sidebar__imagen">
+
+                <div class="sidebar__contenido">
+                    <h3 class="sidebar__heading">Información Meeti</h3>
+
+                    <p class="sidebar__texto">
+                        <span class="sidebar__label">Fecha:</span>
+                    30 de Diciembre del 2022</p>
+
+                    <p class="sidebar__texto">
+                        <span class="sidebar__label">Hora:</span>
+                    20:30</p>
+
+                    <p class="sidebar__texto">
+                        <span class="sidebar__label">Ubicacion:</span>
+                    Av. vallarta 3033</p>
+                </div>
+
+            </aside>
+        </div>
+    </main>
+
+
+
+
+
+    <footer class="footer contenedor">
+        <nav class="navegacion">
+            <a class="navegacion__enlace navegacion__enlace--crear" href="#">Crear Grupo</a>
+            <a class="navegacion__enlace" href="#">Iniciar Sesión</a>
+            <a class="navegacion__enlace" href="#">Registrarse</a>
+        </nav>
+
+        <p class="footer__copyright">Todos los derechos reservados. Meeti</p>
+
+    </footer>
+
 </body>
 </html>
